--- a/angular.json
+++ b/angular.json
@@ -62,6 +62,33 @@
                   "maximumError": "10kb"
                 }
               ]
+            },
+            "staging": {
+              "fileReplacements": [
+                {
+                  "replace": "projects/pezevents/src/environments/environment.ts",
+                  "with": "projects/pezevents/src/environments/environment.staging.ts"
+                }
+              ],
+              "optimization": true,
+              "outputHashing": "all",
+              "sourceMap": true,
+              "namedChunks": false,
+              "extractLicenses": true,
+              "vendorChunk": false,
+              "buildOptimizer": false,
+              "budgets": [
+                {
+                  "type": "initial",
+                  "maximumWarning": "2mb",
+                  "maximumError": "5mb"
+                },
+                {
+                  "type": "anyComponentStyle",
+                  "maximumWarning": "6kb",
+                  "maximumError": "10kb"
+                }
+              ]
             }
           }
         },
@@ -73,6 +100,9 @@
           "configurations": {
             "production": {
               "browserTarget": "pezevents:build:production"
+            },
+            "staging": {
+              "browserTarget": "pezevents:build:staging"
             }
           }
         },
@@ -121,6 +151,9 @@
           "configurations": {
             "production": {
               "devServerTarget": "pezevents:serve:production"
+            },
+            "staging": {
+              "devServerTarget": "pezevents:serve:staging"
             }
           }
         },
@@ -145,6 +178,9 @@
           "configurations": {
             "production": {
               "tsConfig": "projects/pezevents-lib/tsconfig.lib.prod.json"
+            },
+            "staging": {
+              "tsConfig": "projects/pezevents-lib/tsconfig.lib.staging.json"
             }
           }
         },
