--- a/package.json
+++ b/package.json
@@ -7,7 +7,10 @@
     "build": "ng build",
     "test": "ng test",
     "lint": "ng lint",
-    "e2e": "ng e2e"
+    "e2e": "ng e2e",
+    "deploy-functions-dev": "firebase deploy --only \"functions\" -P dev",
+    "deploy-functions-stage": "firebase deploy --only \"functions\" -P staging",
+    "deploy-functions-prod": "firebase deploy --only \"functions\" -P prod"
   },
   "private": true,
   "dependencies": {
