syntax github action fixes

--- a/.github/workflows/pr-on-main.yml
+++ b/.github/workflows/pr-on-main.yml
@@ -1,5 +1,5 @@
 # File for Pull Request on master branch
-name: PR on main
+name: Build and Test pezevents-lib
 
 # When a PR is opened to master
 'on': 
