--- a/.github/workflows/publish-lib.yml
+++ b/.github/workflows/publish-lib.yml
@@ -15,11 +15,11 @@ jobs:
       steps:
         # Checkout code
         - name: Checkout Code
-            if: github.event.pull_request.merged == true && contains(github.event.commits[0].message, '[skip-ci]') == false
+            if: github.event.pull_request.merged == true
             uses: actions/checkout@v2
             
         - name: Commit files
-          if: github.event.pull_request.merged == true && contains(github.event.commits[0].message, '[skip-ci]') == false
+          if: github.event.pull_request.merged == true
           run: |
             cd .\projects\prezevents-lib
             npm version patch
@@ -30,13 +30,13 @@ jobs:
             git commit -m "Release [skip-ci]" -a || true    
 
         - name: Deploy
-            if: github.event.pull_request.merged == true && contains(github.event.commits[0].message, '[skip-ci]') == false
+            if: github.event.pull_request.merged == true
             env:
               NPM_AUTH_TOKEN: ${{ secrets.NPM_AUTH_TOKEN }}
             run: |
               npm config set //registry.npmjs.org/:_authToken=$NPM_AUTH_TOKEN 
         - name: Push changes
-            if: github.event.pull_request.merged == true && contains(github.event.commits[0].message, '[skip-ci]') == false
+            if: github.event.pull_request.merged == true
             uses: ad-m/github-push-action@main
             with:
               github_token: ${{ secrets.ACTION_AUTH_TOKEN }}
