--- a/.github/workflows/publish-lib.yml
+++ b/.github/workflows/publish-lib.yml
@@ -1,8 +1,7 @@
-name: Merge on main
+name: Publish pezevents-lib
 on:
   pull_request:
-    branches:
-      - main
+    branches: [ main ]
     types: [ closed ]
 jobs:
     build_and_deploy:
@@ -13,10 +12,11 @@ jobs:
           # Latest nodes only
           node-version: [ 13.x ]
       steps:
+      
         # Checkout code
         - name: Checkout Code
-            uses: actions/checkout@v2
-            run: "::debug::whats going on?{github.event}"
+          uses: actions/checkout@v2
+          run: echo "::debug::whats going on?{github.event}"
             
         - name: Commit files
           run: |
