--- a/.github/workflows/publish-lib.yml
+++ b/.github/workflows/publish-lib.yml
@@ -32,10 +32,13 @@ jobs:
           env:
             NPM_AUTH_TOKEN: ${{ secrets.NPM_AUTH_TOKEN }}
           run: |
-              npm config set //registry.npmjs.org/:_authToken=$NPM_AUTH_TOKEN 
+              npm config set //registry.npmjs.org/:_authToken=$NPM_AUTH_TOKEN
+              cd .\dist\pezevents-lib
+              npm publish
+              cd ..\..
+
         - name: Push changes
-            uses: ad-m/github-push-action@main
-            with:
-              github_token: ${{ secrets.ACTION_AUTH_TOKEN }}
-              tags: true
-              force: true
+          run: |
+            git config --local user.email "action@github.com"
+            git config --local user.name "GitHub Action"
+            git push   
