--- a/.github/workflows/publish-lib.yml
+++ b/.github/workflows/publish-lib.yml
@@ -14,8 +14,9 @@ jobs:
       steps:
       
         # Checkout code
-        - uses: actions/checkout@v2
-        - run: echo "::debug::whats going on?{github.event}"
+        
+        - name: Checkout repository
+          uses: actions/checkout@v2
 
         - name: patch pezevents-lib npm version
           working-directory: ./projects/pezevents-lib
@@ -28,17 +29,12 @@ jobs:
             git config --local user.name "GitHub Action"
             git add .
             git commit -m "Release [skip-ci]" -a || true    
+            git push   
 
-        - name: Deploy
+        - name: Publish
           env:
             NPM_AUTH_TOKEN: ${{ secrets.NPM_AUTH_TOKEN }}
-          working-directory: ./dist/pezevents-lib
-          run: |
-              npm config set //registry.npmjs.org/:_authToken=$NPM_AUTH_TOKEN
-              npm publish
-
-        - name: Push changes
-          run: |
-            git config --local user.email "action@github.com"
-            git config --local user.name "GitHub Action"
-            git push   
+            GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }} # Leave this as is, it's automatically generated
+          uses: pascalgn/npm-publish-action@1.3.6
+          with: 
+            workspace: "./dist/pezevents-lib"
