--- a/.github/workflows/publish-lib.yml
+++ b/.github/workflows/publish-lib.yml
@@ -47,6 +47,6 @@ jobs:
             GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }} # Leave this as is, it's automatically generated
           uses: pascalgn/npm-publish-action@1.3.6
           with: 
-            workspace: "./dist/pezevents-lib"
             publish_command: "npm",
-            publish_args: "--non-interactive"
+            workspace: "./dist/pezevents-lib"
+            publish_args: "--non-interactive --verbose"
