--- a/.github/workflows/publish-lib.yml
+++ b/.github/workflows/publish-lib.yml
@@ -41,12 +41,12 @@ jobs:
             git commit -m "pezevents-lib version patch bump" -a || true    
             git push   
 
-        - name: Publish
+        - name: Publish if version has been updated
+          uses: pascalgn/npm-publish-action@1.3.6
+          with: 
+            publish_command: "npm"
+            workspace: "./dist/pezevents-lib"
+            publish_args: "--non-interactive --verbose"
           env:
             NPM_AUTH_TOKEN: ${{ secrets.NPM_AUTH_TOKEN }}
             GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }} # Leave this as is, it's automatically generated
-          uses: pascalgn/npm-publish-action@1.3.6
-          with: 
-            publish_command: "npm",
-            workspace: "./dist/pezevents-lib"
-            publish_args: "--non-interactive --verbose"
