--- a/.github/workflows/publish-lib.yml
+++ b/.github/workflows/publish-lib.yml
@@ -1,52 +1,52 @@
-name: Publish pezevents-lib
-on:
-  pull_request:
-    branches: [ main ]
-    types: [ closed ]
-jobs:
-    build_and_publish_pezevents_lib:
-      # Setup OS and Node Version
-      runs-on: ubuntu-latest
-      strategy:
-        matrix:
-          # Latest nodes only
-          node-version: [ 13.x ]
-      steps:
+# name: Publish pezevents-lib
+# on:
+#   pull_request:
+#     branches: [ main ]
+#     types: [ closed ]
+# jobs:
+#     build_and_publish_pezevents_lib:
+#       # Setup OS and Node Version
+#       runs-on: ubuntu-latest
+#       strategy:
+#         matrix:
+#           # Latest nodes only
+#           node-version: [ 13.x ]
+#       steps:
       
-        # Checkout code
+#         # Checkout code
         
-        - name: Checkout repository
-          uses: actions/checkout@v2
+#         - name: Checkout repository
+#           uses: actions/checkout@v2
 
-        - name: Use Node.js ${{ matrix.node-version }}
-          uses: actions/setup-node@v1
-          with:
-            node-version: ${{ matrix.node-version }}
+#         - name: Use Node.js ${{ matrix.node-version }}
+#           uses: actions/setup-node@v1
+#           with:
+#             node-version: ${{ matrix.node-version }}
 
-        - name: Install environment
-          run: npm ci
+#         - name: Install environment
+#           run: npm ci
 
-        - name: patch pezevents-lib npm version
-          working-directory: ./projects/pezevents-lib
-          run: npm version patch
+#         - name: patch pezevents-lib npm version
+#           working-directory: ./projects/pezevents-lib
+#           run: npm version patch
 
-        - name: Build pezevents-lib
-          run: npm run build --project pezevents-lib
+#         - name: Build pezevents-lib
+#           run: npm run build --project pezevents-lib
 
-        - name: Commit files
-          run: |
-            git config --local user.email "action@github.com"
-            git config --local user.name "GitHub Action"
-            git add .
-            git commit -m "pezevents-lib version patch bump" -a || true    
-            git push   
+#         - name: Commit files
+#           run: |
+#             git config --local user.email "action@github.com"
+#             git config --local user.name "GitHub Action"
+#             git add .
+#             git commit -m "pezevents-lib version patch bump" -a || true    
+#             git push   
 
-        - name: Publish if version has been updated
-          uses: pascalgn/npm-publish-action@1.3.6
-          with: 
-            publish_command: "npm"
-            workspace: "./dist/pezevents-lib"
-            publish_args: "--non-interactive --verbose"
-          env:
-            NPM_AUTH_TOKEN: ${{ secrets.NPM_AUTH_TOKEN }}
-            GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }} # Leave this as is, it's automatically generated
+#         - name: Publish if version has been updated
+#           uses: pascalgn/npm-publish-action@1.3.6
+#           with: 
+#             publish_command: "npm"
+#             workspace: "./dist/pezevents-lib"
+#             publish_args: "--non-interactive --verbose"
+#           env:
+#             NPM_AUTH_TOKEN: ${{ secrets.NPM_AUTH_TOKEN }}
+#             GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }} # Leave this as is, it's automatically generated
