--- a/.github/workflows/firebase-dev-push-deploy.yml
+++ b/.github/workflows/firebase-dev-push-deploy.yml
@@ -11,13 +11,7 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v2
-      - run: npm ci && npm run build
-      - uses: FirebaseExtended/action-hosting-deploy@v0
-        with:
-          repoToken: '${{ secrets.GITHUB_TOKEN }}'
-          firebaseServiceAccount: '${{ secrets.FIREBASE_SERVICE_ACCOUNT_DEV_PEZEVENTS }}'
-          projectId: dev-pezevents
-          channelId: live
-          target: dev-pezevents
-        env:
-          FIREBASE_CLI_PREVIEWS: hostingchannels
+      - run: |
+        npm ci
+        npm run build
+        firebase deploy --only hosting -P dev-pezevents --token ${{secrets.FIREBASE_CI_TOKEN}}
