--- a/.github/workflows/firebase-dev-push-deploy.yml
+++ b/.github/workflows/firebase-dev-push-deploy.yml
@@ -10,7 +10,8 @@ jobs:
   dev_preview:
     runs-on: ubuntu-latest
     steps:
-      - uses: actions/checkout@v2
-      - run: npm ci && npm run Build
+      - name: NPM Install and Dev Build
+        uses: actions/checkout@v2
+        run: npm ci && npm run Build
       - name: Firebase Dev Deploy
-        - run: firebase deploy --only hosting -P dev-pezevents --token "${{secrets.FIREBASE_CI_TOKEN}}"
+        run: firebase deploy --only hosting -P dev-pezevents --token ${{ secrets.FIREBASE_CI_TOKEN }}
