--- a/.github/workflows/firebase-dev-push-deploy.yml
+++ b/.github/workflows/firebase-dev-push-deploy.yml
@@ -10,8 +10,8 @@ jobs:
   dev_preview:
     runs-on: ubuntu-latest
     steps:
-      - name: NPM Install and Dev Build
-        uses: actions/checkout@v2
-        run: npm ci && npm run Build
-      - name: Firebase Dev Deploy
-        run: firebase deploy --only hosting -P dev-pezevents --token ${{ secrets.FIREBASE_CI_TOKEN }}
+    - id: NPM Install and Dev Build
+      uses: actions/checkout@v2
+      run: npm ci && npm run Build
+    - id: Firebase Dev Deploy
+      run: firebase deploy --only hosting -P dev-pezevents --token ${{ secrets.FIREBASE_CI_TOKEN }}
