--- a/.github/workflows/firebase-dev-push-deploy.yml
+++ b/.github/workflows/firebase-dev-push-deploy.yml
@@ -18,5 +18,6 @@ jobs:
           firebaseServiceAccount: '${{ secrets.FIREBASE_SERVICE_ACCOUNT_DEV_PEZEVENTS }}'
           channelId: live
           projectId: dev-pezevents
+          target: dev-pezevents
         env:
           FIREBASE_CLI_PREVIEWS: hostingchannels
