--- a/.github/workflows/firebase-dev-push-deploy.yml
+++ b/.github/workflows/firebase-dev-push-deploy.yml
@@ -7,17 +7,16 @@ name: Deploy to Dev
     branches:
       - develop
 jobs:
-  dev_preview:
+  dev_deploy:
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v2
-      - run: npm ci && npm run build
-      - uses: FirebaseExtended/action-hosting-deploy@v0
+      - run: npm ci && npm run build && firebase
+      - name: Deploy to Firebase
+        uses: w9jds/firebase-action@master
         with:
-          repoToken: '${{ secrets.GITHUB_TOKEN }}'
-          firebaseServiceAccount: '${{ secrets.FIREBASE_SERVICE_ACCOUNT_DEV_PEZEVENTS }}'
-          channelId: live
-          projectId: dev-pezevents
-          target: dev-pezevents
+          args: deploy -P dev-pezevents --only hosting:dev-pezevents 
+        env:
+          FIREBASE_TOKEN: ${{ secrets.FIREBASE_CI_TOKEN }}
         env:
           FIREBASE_CLI_PREVIEWS: hostingchannels
