--- a/.github/workflows/firebase-dev-push-deploy.yml
+++ b/.github/workflows/firebase-dev-push-deploy.yml
@@ -6,17 +6,22 @@ name: Deploy to Dev
   push:
     branches:
       - develop
+
 jobs:
+
   dev_deploy:
+    
     runs-on: ubuntu-latest
+    
     steps:
-      - uses: actions/checkout@v2
-      - run: npm ci && npm run build && firebase
-      - name: Deploy to Firebase
-        uses: w9jds/firebase-action@master
-        with:
-          args: deploy -P dev-pezevents --only hosting:dev-pezevents 
-        env:
-          FIREBASE_TOKEN: ${{ secrets.FIREBASE_CI_TOKEN }}
-        env:
-          FIREBASE_CLI_PREVIEWS: hostingchannels
+    - uses: actions/checkout@master
+    - uses: actions/setup-node@master
+      with:
+        node-version: '13.x'
+    - run: npm install
+    - run: npm run build
+    - uses: w9jds/firebase-action@master
+      with:
+        args: deploy -P dev-pezevents --only hosting:dev-pezevents 
+      env:
+        FIREBASE_TOKEN: ${{ secrets.FIREBASE_CI_TOKEN }}
