--- a/.github/workflows/firebase-pr-previews-deploy.yml
+++ b/.github/workflows/firebase-pr-previews-deploy.yml
@@ -4,44 +4,99 @@
 name: Deploy previews for PRs to main/staging/develop
 'on': pull_request
 jobs:
-  prod_preview:
-    runs-on: ubuntu-latest
-    if: github.ref != 'refs/heads/main'
-    steps:
-      - uses: actions/checkout@v2
-      - run: npm ci && npm run build --prod
-      - uses: FirebaseExtended/action-hosting-deploy@v0
-        with:
-          repoToken: '${{ secrets.GITHUB_TOKEN }}'
-          firebaseServiceAccount: '${{ secrets.FIREBASE_SERVICE_ACCOUNT_PEZEVENTS }}'
-          projectId: pezevents
-        env:
-          FIREBASE_CLI_PREVIEWS: hostingchannels
-  dev_preview:
+  # prod_preview:
+  #   runs-on: ubuntu-latest
+  #   if: github.ref != 'refs/heads/main'
+  #   steps:
+  #     - uses: actions/checkout@v2
+  #     - run: npm ci && npm run build --prod
+  #     - uses: FirebaseExtended/action-hosting-deploy@v0
+  #       with:
+  #         repoToken: '${{ secrets.GITHUB_TOKEN }}'
+  #         firebaseServiceAccount: '${{ secrets.FIREBASE_SERVICE_ACCOUNT_PEZEVENTS }}'
+  #         projectId: pezevents
+  #       env:
+  #         FIREBASE_CLI_PREVIEWS: hostingchannels
+  # dev_preview:
+  #   runs-on: ubuntu-latest
+  #   if: github.ref != 'refs/heads/develop'
+  #   steps:
+  #     - uses: actions/checkout@v2
+  #     - run: npm ci && npm run build
+  #     - uses: FirebaseExtended/action-hosting-deploy@v0
+  #       with:
+  #         repoToken: '${{ secrets.GITHUB_TOKEN }}'
+  #         firebaseServiceAccount: '${{ secrets.FIREBASE_SERVICE_ACCOUNT_DEV_PEZEVENTS }}'
+  #         projectId: dev-pezevents
+  #         target: dev-pezevents
+  #       env:
+  #         FIREBASE_CLI_PREVIEWS: hostingchannels
+  # stage_preview:
+  #   runs-on: ubuntu-latest
+  #   if: github.ref != 'refs/heads/staging'
+  #   steps:
+  #     - uses: actions/checkout@v2
+  #     - run: npm ci && npm run build
+  #     - uses: FirebaseExtended/action-hosting-deploy@v0
+  #       with:
+  #         repoToken: '${{ secrets.GITHUB_TOKEN }}'
+  #         firebaseServiceAccount: '${{ secrets.FIREBASE_SERVICE_ACCOUNT_STAGE_PEZEVENTS }}'
+  #         projectId: stage-pezevents
+  #         target: stage-pezevents
+  #       env:
+  #         FIREBASE_CLI_PREVIEWS: hostingchannels
+
+  develop_pr_preview:
+    
     runs-on: ubuntu-latest
     if: github.ref != 'refs/heads/develop'
+    
     steps:
-      - uses: actions/checkout@v2
-      - run: npm ci && npm run build
-      - uses: FirebaseExtended/action-hosting-deploy@v0
-        with:
-          repoToken: '${{ secrets.GITHUB_TOKEN }}'
-          firebaseServiceAccount: '${{ secrets.FIREBASE_SERVICE_ACCOUNT_DEV_PEZEVENTS }}'
-          projectId: dev-pezevents
-          target: dev-pezevents
-        env:
-          FIREBASE_CLI_PREVIEWS: hostingchannels
-  stage_preview:
+    - uses: actions/checkout@master
+    - uses: actions/setup-node@master
+      with:
+        node-version: '13.x'
+    - run: npm ci
+    - run: npm run build
+    - uses: w9jds/firebase-action@v2.0.0
+      with:
+        args: hosting:channel:deploy -P dev-pezevents --only dev-pezevents  ${{github.run_id}}-${{github.run_number}}
+      env:
+        FIREBASE_TOKEN: ${{ secrets.FIREBASE_CI_TOKEN }}
+
+  staging_pr_preview:
+    
     runs-on: ubuntu-latest
     if: github.ref != 'refs/heads/staging'
+    
     steps:
-      - uses: actions/checkout@v2
-      - run: npm ci && npm run build
-      - uses: FirebaseExtended/action-hosting-deploy@v0
-        with:
-          repoToken: '${{ secrets.GITHUB_TOKEN }}'
-          firebaseServiceAccount: '${{ secrets.FIREBASE_SERVICE_ACCOUNT_STAGE_PEZEVENTS }}'
-          projectId: stage-pezevents
-          target: stage-pezevents
-        env:
-          FIREBASE_CLI_PREVIEWS: hostingchannels
+    - uses: actions/checkout@master
+    - uses: actions/setup-node@master
+      with:
+        node-version: '13.x'
+    - run: npm ci
+    - run: npm run build:staging
+    - uses: w9jds/firebase-action@v2.0.0
+      with:
+        args: hosting:channel:deploy -P stage-pezevents --only stage-pezevents  ${{github.run_id}}-${{github.run_number}}
+      env:
+        FIREBASE_TOKEN: ${{ secrets.FIREBASE_CI_TOKEN }}
+
+
+  main_pr_preview:
+    
+    runs-on: ubuntu-latest
+    if: github.ref != 'refs/heads/staging'
+    
+    steps:
+    - uses: actions/checkout@master
+    - uses: actions/setup-node@master
+      with:
+        node-version: '13.x'
+    - run: npm ci
+    - run: npm run build:prod
+    - uses: w9jds/firebase-action@v2.0.0
+      with:
+        args: hosting:channel:deploy -P pezevents --only pezevents  ${{github.run_id}}-${{github.run_number}}
+      env:
+        FIREBASE_TOKEN: ${{ secrets.FIREBASE_CI_TOKEN }}
