--- a/.github/workflows/firebase-prod-push-deploy.yml
+++ b/.github/workflows/firebase-prod-push-deploy.yml
@@ -11,8 +11,19 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v2
-      - run: npm ci && npm run build --prod
-      - uses: FirebaseExtended/action-hosting-deploy@v0
+      - name: Publish lib-pezevents if version has been updated
+        uses: pascalgn/npm-publish-action@1.3.6
+        with: # All of theses inputs are optional
+          create_tag: "true"
+          workspace: "."
+          publish_command: "npm"
+          publish_args: "--non-interactive"
+        env: # More info about the environment variables in the README
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }} # Leave this as is, it's automatically generated
+          NPM_AUTH_TOKEN: ${{ secrets.NPM_AUTH_TOKEN }} # You need to set this in your repo settings
+      - name: Build and deploy app to production
+        run: npm ci && npm run build --prod
+        uses: FirebaseExtended/action-hosting-deploy@v0
         with:
           repoToken: '${{ secrets.GITHUB_TOKEN }}'
           firebaseServiceAccount: '${{ secrets.FIREBASE_SERVICE_ACCOUNT_PEZEVENTS }}'
