--- a/.github/workflows/firebase-prod-push-deploy.yml
+++ b/.github/workflows/firebase-prod-push-deploy.yml
@@ -23,7 +23,7 @@ jobs:
           NPM_AUTH_TOKEN: ${{ secrets.NPM_AUTH_TOKEN }} # You need to set this in your repo settings
       - uses: FirebaseExtended/action-hosting-deploy@v0
       - name: Build and deploy app to production
-      - run: npm ci && npm run build --prod
+        run: npm ci && npm run build --prod
         with:
           repoToken: '${{ secrets.GITHUB_TOKEN }}'
           firebaseServiceAccount: '${{ secrets.FIREBASE_SERVICE_ACCOUNT_PEZEVENTS }}'
