--- a/.github/workflows/firebase-pr-previews-deploy.yml
+++ b/.github/workflows/firebase-pr-previews-deploy.yml
@@ -89,7 +89,7 @@ jobs:
   main_pr_preview:
     
     runs-on: ubuntu-latest
-    if: github.ref == 'refs/heads/staging'
+    if: github.ref == 'refs/heads/main'
     
     steps:
     - uses: actions/checkout@master
