--- a/.github/workflows/firebase-pr-preview-deployments.yml
+++ b/.github/workflows/firebase-pr-preview-deployments.yml
@@ -3,6 +3,10 @@
 
 name: Deploy previews for PRs to main/staging/develop
 'on': pull_request
+
+env:
+  projectId: 'plugin-fn-xml-node'
+
 jobs:
   # prod_preview:
   #   runs-on: ubuntu-latest
@@ -46,7 +50,7 @@ jobs:
   #       env:
   #         FIREBASE_CLI_PREVIEWS: hostingchannels
 
-  one:
+  print_github_context:
     runs-on: ubuntu-latest
     steps:
       - name: Dump GitHub context
@@ -108,3 +112,45 @@ jobs:
         args: hosting:channel:deploy -P pezevents --only pezevents  ${{github.run_id}}-${{github.run_number}}
       env:
         FIREBASE_TOKEN: ${{ secrets.FIREBASE_CI_TOKEN }}
+    
+  comment_pr_url:
+
+    runs-on: ubuntu-latest
+
+    steps:
+    # Set PROJECT_ID env value
+    - name: Set dev projectId
+      if: github.base_ref == 'develop'
+      env:
+        PROJECT_ID: "dev-pezevents"
+
+    - name: Set stage projectId
+      if: github.base_ref == 'staging'
+      env:
+        PROJECT_ID: "stage-pezevents"
+
+    - name: Set main projectId
+      if: github.base_ref == 'main'
+      env:
+        PROJECT_ID: "pezevents"
+    
+    - id: hostingList
+    - uses: w9jds/firebase-action@v2.0.0
+      with:
+        args: hosting:channel:list -P ${{env.PROJECT_ID}}
+      env:
+        FIREBASE_TOKEN: ${{ secrets.FIREBASE_CI_TOKEN }}
+
+    - name: Add PR Comment
+      uses: mshick/add-pr-comment@v1
+      with:
+        message: |
+          Preview deployment complete:
+
+  print_github_context:
+    runs-on: ubuntu-latest
+    steps:
+      - name: Dump extra values
+        env:
+          JOB_OUTPUTS: ${{ toJSON(needs.print_github_context.outputs) }}
+        run: echo "$JOB_OUTPUTS"
