--- a/.github/workflows/firebase-pr-preview-deployments.yml
+++ b/.github/workflows/firebase-pr-preview-deployments.yml
@@ -135,7 +135,7 @@ jobs:
         PROJECT_ID: "pezevents"
     
     - id: hostingList
-    - uses: w9jds/firebase-action@v2.0.0
+      uses: w9jds/firebase-action@v2.0.0
       with:
         args: hosting:channel:list -P ${{env.PROJECT_ID}}
       env:
