--- a/.github/workflows/firebase-pr-preview-deployments.yml
+++ b/.github/workflows/firebase-pr-preview-deployments.yml
@@ -131,7 +131,7 @@ jobs:
       env:
         PROJECT_ID: "pezevents"
     
-    - id: hostingList
+    - name: hostingList
       uses: w9jds/firebase-action@v2.0.0
       with:
         args: hosting:channel:list -P ${{env.PROJECT_ID}}
