--- a/.github/workflows/firebase-pr-preview-deployments.yml
+++ b/.github/workflows/firebase-pr-preview-deployments.yml
@@ -149,5 +149,5 @@ jobs:
     steps:
       - name: Dump extra values
         env:
-          JOB_OUTPUTS: ${{ toJSON(needs.print_github_context.outputs) }}
+          JOB_OUTPUTS: ${{ toJSON(needs.develop_pr_preview.outputs) }}
         run: echo "$JOB_OUTPUTS"
