--- a/.github/workflows/firebase-deployments.yml
+++ b/.github/workflows/firebase-deployments.yml
@@ -18,22 +18,85 @@ jobs:
           GITHUB_CONTEXT: ${{ toJSON(github) }}
         run: echo "$GITHUB_CONTEXT"
 
+
+  # Check filechanges for functions deployment
+  check_functions:
+    name: Check files
+    outputs:
+      deploy_functions: ${{ steps.check_files.outputs.deploy_functions }}
+    runs-on: ubuntu-latest
+    steps:
+      - name: Checkout code
+        uses: actions/checkout@v2
+        with:
+          fetch-depth: 2
+
+      - name: check modified files
+        id: check_files
+        run: |
+          echo "=============== list modified files ==============="
+          git diff --name-only HEAD^ HEAD
+          
+          echo "========== check paths of modified files =========="
+          git diff --name-only HEAD^ HEAD > files.txt
+          while IFS= read -r file
+          do
+            echo $file
+            if [[ $file != functions/* ]]; then
+              echo "This modified file is not under the 'functions' folder."
+              echo "::set-output name=deploy_functions::false"
+              break
+            else
+              echo "::set-output name=deploy_functions::true"
+            fi
+          done < files.txt
+
+  job_for_functions:
+    name: Job for 'functions' folder
+    needs: check_functions
+    if: needs.check.outputs.deploy_functions == 'true'
+    runs-on: ubuntu-latest
+    steps:
+      - name: run for 'functions' folder
+        run: echo "This job runs only when all the modified files are under the 'functions' folder."
+
   # Deploy app to development
   # dev.sezzion.com
   dev_deploy:
     runs-on: ubuntu-latest
+    needs: check_functions
+
     if: github.ref == 'develop'
 
     steps:
+    - name: Build app
     - uses: actions/checkout@master
     - uses: actions/setup-node@master
       with:
         node-version: '13.x'
     - run: npm ci
     - run: npm run build
+
+    - name: Build functions
+    if: needs.check_functions.outputs.deploy_functions == 'true'
+    - run: |
+        cd ./functions
+        npm ci
+        npm run build
+        cd ..
+
+    - name: Deploy hosting
     - uses: w9jds/firebase-action@master
       with:
         args: deploy -P dev-pezevents --only hosting:dev-pezevents 
+      env:
+        FIREBASE_TOKEN: ${{ secrets.FIREBASE_CI_TOKEN }}
+
+    - name: Deploy functions
+      if: needs.check_functions.outputs.deploy_functions == 'true'
+    - uses: w9jds/firebase-action@master
+      with:
+        args: deploy -P dev-pezevents --only functions
       env:
         FIREBASE_TOKEN: ${{ secrets.FIREBASE_CI_TOKEN }}
 
@@ -41,18 +104,39 @@ jobs:
   # stage.sezzion.com
   staging_deploy:
     runs-on: ubuntu-latest
+    needs: check_functions
+
     if: github.ref == 'staging'
 
     steps:
+    - name: Build app
     - uses: actions/checkout@master
     - uses: actions/setup-node@master
       with:
         node-version: '13.x'
     - run: npm ci
     - run: npm run build
+
+    - name: Build functions
+    if: needs.check_functions.outputs.deploy_functions == 'true'
+    - run: |
+        cd ./functions
+        npm ci
+        npm run build
+        cd ..
+
+    - name: Deploy hosting
     - uses: w9jds/firebase-action@master
       with:
         args: deploy -P stage-pezevents --only hosting:stage-pezevents 
+      env:
+        FIREBASE_TOKEN: ${{ secrets.FIREBASE_CI_TOKEN }}
+
+    - name: Deploy functions
+      if: needs.check_functions.outputs.deploy_functions == 'true'
+    - uses: w9jds/firebase-action@master
+      with:
+        args: deploy -P stage-pezevents --only functions
       env:
         FIREBASE_TOKEN: ${{ secrets.FIREBASE_CI_TOKEN }}
 
@@ -60,7 +144,8 @@ jobs:
   # sezzion.com
   prod_deploy:
     runs-on: ubuntu-latest
-    if: github.ref == 'main'
+    needs: check
+    if: github.ref == 'main' && needs.check.outputs.deploy_functions == 'true'
 
     steps:
       - uses: actions/checkout@v2
