--- a/.github/workflows/firebase-deployments.yml
+++ b/.github/workflows/firebase-deployments.yml
@@ -145,9 +145,10 @@ jobs:
   prod_deploy:
     runs-on: ubuntu-latest
     needs: check
-    if: github.ref == 'main' && needs.check.outputs.deploy_functions == 'true'
+    if: github.ref == 'main'
 
     steps:
+      - name: Build and deploy app
       - uses: actions/checkout@v2
       - run: npm ci && npm run build --prod
       - uses: FirebaseExtended/action-hosting-deploy@v0
@@ -159,3 +160,19 @@ jobs:
           target: pezevents
         env:
           FIREBASE_CLI_PREVIEWS: hostingchannels
+
+      - name: Build and deploy functions
+      if: needs.check_functions.outputs.deploy_functions == 'true'
+      - run: |
+        cd ./functions
+        npm ci
+        npm run build
+        cd ..
+
+    - name: Deploy functions
+      if: needs.check_functions.outputs.deploy_functions == 'true'
+    - uses: w9jds/firebase-action@master
+      with:
+        args: deploy -P stage-pezevents --only functions
+      env:
+        FIREBASE_TOKEN: ${{ secrets.FIREBASE_CI_TOKEN }}
