--- a/.github/workflows/firebase-deployments.yml
+++ b/.github/workflows/firebase-deployments.yml
@@ -78,7 +78,7 @@ jobs:
     - run: npm run build
 
     - name: Build functions
-    if: needs.check_functions.outputs.deploy_functions == 'true'
+    - if: needs.check_functions.outputs.deploy_functions == 'true'
     - run: |
         cd ./functions
         npm ci
