--- a/.github/workflows/firebase-deployments.yml
+++ b/.github/workflows/firebase-deployments.yml
@@ -164,7 +164,7 @@ jobs:
       - name: Build and deploy functions
       - if: needs.check_functions.outputs.deploy_functions == 'true'
       - run: |
-        cd ./functions
+        cd .\functions
         npm ci
         npm run build
         cd ..
