--- a/.github/workflows/firebase-deployments.yml
+++ b/.github/workflows/firebase-deployments.yml
@@ -166,11 +166,10 @@ jobs:
       - uses: actions/setup-node@master
         with:
           node-version: '13.x'
-      - run: |
-        cd .\functions
-        npm ci
-        npm run build
-        cd ..
+      - run: cd .\functions
+      - run: npm ci
+      - run: npm run build
+      - run: ..
 
     - name: Deploy functions
     - if: needs.check_functions.outputs.deploy_functions == 'true'
