--- a/.github/workflows/firebase-deployments.yml
+++ b/.github/workflows/firebase-deployments.yml
@@ -169,7 +169,7 @@ jobs:
       - run: cd /functions
       - run: npm ci
       - run: npm run build
-      - run: cd ..
+      - run: cd ../
 
     - name: Deploy functions
     - if: needs.check_functions.outputs.deploy_functions == 'true'
