--- a/.github/workflows/firebase-deployments.yml
+++ b/.github/workflows/firebase-deployments.yml
@@ -166,13 +166,14 @@ jobs:
       - uses: actions/setup-node@master
         with:
           node-version: '13.x'
-      - run: cd /functions
-      - run: npm ci
-      - run: npm run build
-      - run: cd ../
+        working-directory: ./functions
+        run: |
+          npm ci
+          npm run build
 
     - name: Deploy functions
     - if: needs.check_functions.outputs.deploy_functions == 'true'
+      working-directory: ./
     - uses: w9jds/firebase-action@master
       with:
         args: deploy -P stage-pezevents --only functions
