--- a/.github/workflows/firebase-deployments.yml
+++ b/.github/workflows/firebase-deployments.yml
@@ -144,13 +144,17 @@ jobs:
   # sezzion.com
   prod_deploy:
     runs-on: ubuntu-latest
-    needs: check
+    needs: check_functions
     if: github.ref == 'main'
 
     steps:
-      - name: Build and deploy app
       - uses: actions/checkout@v2
-      - run: npm ci && npm run build --prod
+      - uses: actions/setup-node@master
+        with:
+          node-version: '13.x'
+
+      - name: Build and deploy app
+        run: npm ci && npm run build --prod
       - uses: FirebaseExtended/action-hosting-deploy@v0
         with:
           repoToken: '${{ secrets.GITHUB_TOKEN }}'
@@ -162,17 +166,14 @@ jobs:
           FIREBASE_CLI_PREVIEWS: hostingchannels
 
       - name: Build and deploy functions
-      - if: needs.check_functions.outputs.deploy_functions == 'true'
-      - uses: actions/setup-node@master
-        with:
-          node-version: '13.x'
+        if: needs.check_functions.outputs.deploy_functions == 'true'
         working-directory: ./functions
         run: |
           npm ci
           npm run build
-          
+
       - name: Deploy functions
-      - if: needs.check_functions.outputs.deploy_functions == 'true'
+        if: needs.check_functions.outputs.deploy_functions == 'true'
         working-directory: ./
       - uses: w9jds/firebase-action@master
         with:
