--- a/.github/workflows/firebase-deployments.yml
+++ b/.github/workflows/firebase-deployments.yml
@@ -155,7 +155,7 @@ jobs:
 
     - name: Build and deploy app
       run: npm ci && npm run build --prod
-      uses: FirebaseExtended/action-hosting-deploy@v0
+    - uses: FirebaseExtended/action-hosting-deploy@v0
       with:
         repoToken: '${{ secrets.GITHUB_TOKEN }}'
         firebaseServiceAccount: '${{ secrets.FIREBASE_SERVICE_ACCOUNT_PEZEVENTS }}'
@@ -173,7 +173,7 @@ jobs:
     - name: Deploy functions
       if: needs.check_functions.outputs.deploy_functions == 'true'
       working-directory: ./
-      uses: w9jds/firebase-action@master
+    - uses: w9jds/firebase-action@master
       with:
         args: deploy -P stage-pezevents --only functions
       env:
