--- a/.github/workflows/firebase-deployments.yml
+++ b/.github/workflows/firebase-deployments.yml
@@ -70,14 +70,15 @@ jobs:
 
     steps:
     - name: Checkout and setup node
-      uses: actions/checkout@master
-      uses: actions/setup-node@master
+    - uses: actions/checkout@master
+    - uses: actions/setup-node@master
       with:
         node-version: '13.x'
 
     - name: Build app
-      run: npm ci
-      run: npm run build
+      run: | 
+        npm ci
+        npm run build
 
     - name: Build functions
       if: needs.check_functions.outputs.deploy_functions == 'true'
@@ -112,14 +113,15 @@ jobs:
 
     steps:
     - name: Checkout and setup node
-      uses: actions/checkout@master
-      uses: actions/setup-node@master
+    - uses: actions/checkout@master
+    - uses: actions/setup-node@master
       with:
         node-version: '13.x'
 
     - name: Build app
-      run: npm ci
-      run: npm run build
+      run: |
+        npm ci
+        npm run build
 
     - name: Build functions
       if: needs.check_functions.outputs.deploy_functions == 'true'
@@ -154,8 +156,8 @@ jobs:
 
     steps:
     - name: Checkout and setup node
-      uses: actions/checkout@v2
-      uses: actions/setup-node@master
+    - uses: actions/checkout@v2
+    - uses: actions/setup-node@master
       with:
         node-version: '13.x'
 
@@ -180,8 +182,7 @@ jobs:
 
     - name: Deploy functions
       if: needs.check_functions.outputs.deploy_functions == 'true'
-      working-directory: ./
-    - uses: w9jds/firebase-action@master
+      uses: w9jds/firebase-action@master
       with:
         args: deploy -P stage-pezevents --only functions
       env:
